--- a/index.html
+++ b/index.html
@@ -48,61 +48,78 @@
         transform: scale(0.95);
     }
 
-    /* Envelope section */
+    /* Envelope Section */
     #envelopeContainer {
         display: none;
         justify-content: center;
         align-items: center;
-        margin-top: 40px;
+        margin-top: 50px;
     }
 
     .envelope {
-        width: 250px;
+        width: 260px;
         height: 180px;
-        background: #ff8ac9;
+        background: #ffc6e9;
+        border-radius: 8px;
         position: relative;
-        border-radius: 10px;
         cursor: pointer;
-        transition: transform 0.5s ease;
+        overflow: hidden;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
-    .envelope.open {
-        transform: translateY(-20px);
-    }
-
+    /* Triangle flap */
     .flap {
-        width: 100%;
-        height: 80px;
-        background: #ffa9d6;
+        width: 0;
+        height: 0;
+        border-left: 130px solid transparent;
+        border-right: 130px solid transparent;
+        border-bottom: 90px solid #ff9cd6;
         position: absolute;
         top: 0;
-        border-radius: 10px 10px 0 0;
+        left: 0;
         transform-origin: top;
-        transition: transform 0.6s ease;
+        transition: transform 0.7s ease;
     }
 
+    /* Heart Seal */
+    .seal {
+        position: absolute;
+        top: 62px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 28px;
+        z-index: 10;
+        transition: opacity 0.4s ease;
+    }
+
+    /* Inside letter */
+    .letter {
+        width: 85%;
+        height: 130px;
+        background: white;
+        border-radius: 10px;
+        padding: 15px;
+        position: absolute;
+        bottom: -170px;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: bottom 0.7s ease;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        font-size: 16px;
+        text-align: center;
+    }
+
+    /* Open Animation */
     .envelope.open .flap {
         transform: rotateX(180deg);
     }
 
-    .letter {
-        width: 85%;
-        height: 110px;
-        background: white;
-        position: absolute;
-        bottom: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        border-radius: 10px;
-        padding: 15px;
-        text-align: center;
-        font-size: 16px;
+    .envelope.open .seal {
         opacity: 0;
-        transition: opacity 0.6s ease 0.3s;
     }
 
     .envelope.open .letter {
-        opacity: 1;
+        bottom: 20px;
     }
 
     /* Confetti */
@@ -111,7 +128,6 @@
         top: -10px;
         width: 10px;
         height: 10px;
-        background: randomColor;
         animation: fall linear infinite;
         opacity: 0.8;
     }
@@ -135,44 +151,42 @@
 <!-- Envelope -->
 <div id="envelopeContainer">
     <div class="envelope" id="envelope">
+
         <div class="flap"></div>
+
+        <div class="seal">❤️</div>
+
         <div class="letter">
             <p>
                 You deserve all the happiness in the world 💕<br>
                 Sending a warm birthday hug! 🎀
             </p>
         </div>
+
     </div>
 </div>
 
-
 <script>
-/* Confetti generator */
+/* Confetti Generator */
 function createConfetti() {
-    const confetti = document.createElement("div");
-    confetti.classList.add("confetti");
+    const c = document.createElement("div");
+    c.classList.add("confetti");
 
     const colors = ["#ff2ea6", "#ffa9d6", "#ff7ac8", "#ffcdf2", "#ffffff"];
-    confetti.style.background = colors[Math.floor(Math.random() * colors.length)];
+    c.style.background = colors[Math.floor(Math.random() * colors.length)];
 
-    confetti.style.left = Math.random() * window.innerWidth + "px";
-    confetti.style.animationDuration = 3 + Math.random() * 2 + "s";
-    confetti.style.opacity = Math.random();
+    c.style.left = Math.random() * window.innerWidth + "px";
+    c.style.animationDuration = 3 + Math.random() * 2 + "s";
 
-    document.body.appendChild(confetti);
-
-    setTimeout(() => confetti.remove(), 5000);
+    document.body.appendChild(c);
+    setTimeout(() => c.remove(), 5000);
 }
 
-// continuous confetti
 setInterval(createConfetti, 150);
 
-
-/* Unlock + Show Envelope */
+/* Unlock Logic */
 document.getElementById("unlockBtn").addEventListener("click", () => {
-    const code = document.getElementById("secretCode").value;
-
-    if (code === "Ash25") {
+    if (document.getElementById("secretCode").value === "Ash25") {
         document.getElementById("envelopeContainer").style.display = "flex";
         window.scrollTo(0, 300);
     } else {
@@ -180,7 +194,7 @@ document.getElementById("unlockBtn").addEventListener("click", () => {
     }
 });
 
-/* Envelope open animation */
+/* Open Envelope */
 document.getElementById("envelope").addEventListener("click", () => {
     document.getElementById("envelope").classList.toggle("open");
 });
