--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Birthday Surprise 🎁</title>
+<title>Birthday Surprise 💌</title>
 
 <style>
     body {
@@ -12,7 +12,6 @@
         text-align: center;
         background: linear-gradient(135deg, #ffb3da, #ffc8ec, #ffd6ef);
         min-height: 100vh;
-        overflow-x: hidden;
     }
 
     h1 {
@@ -44,98 +43,109 @@
         transition: 0.2s;
     }
 
-    button:active {
-        transform: scale(0.95);
-    }
-
-    /* Envelope Section */
     #envelopeContainer {
         display: none;
         justify-content: center;
-        align-items: center;
-        margin-top: 50px;
+        margin-top: 40px;
     }
 
+    /* NEW — REAL ENVELOPE 💌 */
     .envelope {
         width: 260px;
         height: 180px;
-        background: #ffc6e9;
-        border-radius: 8px;
         position: relative;
         cursor: pointer;
-        overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        transform-style: preserve-3d;
     }
 
-    /* Triangle flap */
-    .flap {
+    /* Bottom rectangle */
+    .env-body {
+        width: 100%;
+        height: 100%;
+        background: #ff9ccc;
+        border-radius: 12px;
+        position: absolute;
+        z-index: 1;
+        overflow: hidden;
+    }
+
+    /* Left flap */
+    .left-flap {
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-top: 90px solid transparent;
+        border-bottom: 90px solid transparent;
+        border-right: 130px solid #ff8ac9;
+        top: 0;
+        left: 0;
+        z-index: 2;
+    }
+
+    /* Right flap */
+    .right-flap {
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-top: 90px solid transparent;
+        border-bottom: 90px solid transparent;
+        border-left: 130px solid #ff8ac9;
+        top: 0;
+        right: 0;
+        z-index: 2;
+    }
+
+    /* Top flap */
+    .top-flap {
         width: 0;
         height: 0;
         border-left: 130px solid transparent;
         border-right: 130px solid transparent;
-        border-bottom: 90px solid #ff9cd6;
+        border-bottom: 100px solid #ffa9d6;
         position: absolute;
         top: 0;
         left: 0;
         transform-origin: top;
         transition: transform 0.7s ease;
+        z-index: 3;
     }
 
-    /* Heart Seal */
-    .seal {
+    /* Heart seal */
+    .heart {
+        font-size: 32px;
         position: absolute;
-        top: 62px;
+        top: 65px;
         left: 50%;
         transform: translateX(-50%);
-        font-size: 28px;
-        z-index: 10;
-        transition: opacity 0.4s ease;
+        z-index: 4;
     }
 
-    /* Inside letter */
+    /* Letter inside */
     .letter {
         width: 85%;
-        height: 130px;
+        height: 120px;
         background: white;
         border-radius: 10px;
         padding: 15px;
-        position: absolute;
-        bottom: -170px;
-        left: 50%;
-        transform: translateX(-50%);
-        transition: bottom 0.7s ease;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-        font-size: 16px;
         text-align: center;
+        font-size: 16px;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%) translateY(40px);
+        opacity: 0;
+        transition: 0.8s;
+        z-index: 0;
     }
 
-    /* Open Animation */
-    .envelope.open .flap {
+    /* OPEN ANIMATION */
+    .open .top-flap {
         transform: rotateX(180deg);
     }
 
-    .envelope.open .seal {
-        opacity: 0;
-    }
-
-    .envelope.open .letter {
-        bottom: 20px;
-    }
-
-    /* Confetti */
-    .confetti {
-        position: fixed;
-        top: -10px;
-        width: 10px;
-        height: 10px;
-        animation: fall linear infinite;
-        opacity: 0.8;
-    }
-
-    @keyframes fall {
-        to {
-            transform: translateY(120vh) rotate(360deg);
-        }
+    .open .letter {
+        transform: translateX(-50%) translateY(-40px);
+        opacity: 1;
     }
 </style>
 </head>
@@ -143,50 +153,29 @@
 <body>
 
 <h1>Enter Secret Code 🎁</h1>
-
 <input id="secretCode" placeholder="Enter code">
-<br>
 <button id="unlockBtn">Unlock</button>
 
-<!-- Envelope -->
 <div id="envelopeContainer">
     <div class="envelope" id="envelope">
-
-        <div class="flap"></div>
-
-        <div class="seal">❤️</div>
+        <div class="env-body"></div>
+        <div class="left-flap"></div>
+        <div class="right-flap"></div>
+        <div class="top-flap"></div>
+        <div class="heart">❤️</div>
 
         <div class="letter">
-            <p>
-                You deserve all the happiness in the world 💕<br>
-                Sending a warm birthday hug! 🎀
-            </p>
+            You deserve all the happiness in the world 💕<br>
+            Sending a warm birthday hug! 🎀
         </div>
-
     </div>
 </div>
 
 <script>
-/* Confetti Generator */
-function createConfetti() {
-    const c = document.createElement("div");
-    c.classList.add("confetti");
-
-    const colors = ["#ff2ea6", "#ffa9d6", "#ff7ac8", "#ffcdf2", "#ffffff"];
-    c.style.background = colors[Math.floor(Math.random() * colors.length)];
-
-    c.style.left = Math.random() * window.innerWidth + "px";
-    c.style.animationDuration = 3 + Math.random() * 2 + "s";
-
-    document.body.appendChild(c);
-    setTimeout(() => c.remove(), 5000);
-}
-
-setInterval(createConfetti, 150);
-
-/* Unlock Logic */
 document.getElementById("unlockBtn").addEventListener("click", () => {
-    if (document.getElementById("secretCode").value === "Ash25") {
+    const code = document.getElementById("secretCode").value;
+
+    if (code === "Ash25") {
         document.getElementById("envelopeContainer").style.display = "flex";
         window.scrollTo(0, 300);
     } else {
@@ -194,7 +183,6 @@ document.getElementById("unlockBtn").addEventListener("click", () => {
     }
 });
 
-/* Open Envelope */
 document.getElementById("envelope").addEventListener("click", () => {
     document.getElementById("envelope").classList.toggle("open");
 });
