--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ button {
 
         <div class="letter">
             <p>
-                Happy Birthday to the sweetest soul! 💕  
+                Happy Birthday 🎂 to the sweetest soul! 💕  
                 You deserve all the love today & always 🎀  
-                Here’s a little surprise just for you 💌
+                Sending you 💌 a warm birthday hug 🫂
             </p>
         </div>
     </div>
